--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<h1>Hello world!</h1>
+<!DOCTYPE html>
+    <html>
+    <head>
+        <meta charset="utf-8" />
+        <title>Easy Riders</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+
+        <script src="minified.js"></script>
+        <script type="text/javascript" src="main.js"></script>
+        <!-- Init mapy.cz -->
+        <script type="text/javascript" src="https://api.mapy.cz/loader.js"></script>
+        <script type="text/javascript">Loader.load();</script>
+    </head>
+    <body>
+
+        <div id="m" style="height:800px"></div>
+        <script type="text/javascript" src="mapy.js"></script>
+    </body>
+</html>
+
