--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
         <!-- Init mapy.cz -->
         <script type="text/javascript" src="https://api.mapy.cz/loader.js"></script>
         <script type="text/javascript">Loader.load();</script>
+        <script type="text/javascript" src="mapy.js"></script>
+
     </head>
     <body>
-
-        <div id="m" style="height:800px"></div>
-        <script type="text/javascript" src="mapy.js"></script>
+        <div class="header">
+            <h2>Easy Riders</h2>
+        </div>
+        <div class="map_container"></div>
     </body>
 </html>
 
