--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header">
             <h2>Easy Riders</h2>
         </div>
-        <div class="map_container"></div>
+        <div id="map_container"></div>
     </body>
 </html>
 
