--- a/index.html
+++ b/index.html
@@ -7,17 +7,24 @@
 
         <script src="minified.js"></script>
         <script type="text/javascript" src="main.js"></script>
-        <!-- Init mapy.cz -->
+        <!-- Init mapy.cz  -->
         <script type="text/javascript" src="https://api.mapy.cz/loader.js"></script>
         <script type="text/javascript">Loader.load();</script>
         <script type="text/javascript" src="mapy.js"></script>
+   
+
+        <!-- Google Maps -->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBACpZpArBvW9RKRdt43_mk00U3P1tJrG8"></script>
+        <script type="text/javascript" src="maps.js"></script>
+
 
     </head>
     <body>
         <div class="header">
             <h2>Easy Riders</h2>
         </div>
-        <div id="map_container"></div>
+        <div id="mapy_container" class="map hidden"></div>
+        <div id="maps_container" class="map"></div>
     </body>
 </html>
 
