--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="header">
             <h2>Easy Riders</h2>
         </div>
-        <div id="mapy_container" class="map hidden"></div>
-        <div id="maps_container" class="map"></div>
+        <div id="mapy_container" class="map"></div>
+        <div id="maps_container" class="map hidden"></div>
     </body>
 </html>
 
