--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <script src="minified.js"></script>
         <script type="text/javascript" src="main.js"></script>
         <!-- Init mapy.cz  -->
-        <script type="text/javascript" src="https://api.mapy.cz/loader.js"></script>
+        <!-- <script type="text/javascript" src="https://api.mapy.cz/loader.js"></script>
         <script type="text/javascript">Loader.load();</script>
-        <script type="text/javascript" src="mapy.js"></script>
+        <script type="text/javascript" src="mapy.js"></script> -->
    
 
         <!-- Google Maps -->
