--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
         </div>
         <div id="mapy_container" class="map hidden"></div>
         <div id="maps_container" class="map"></div>
+
+        <div class="gradients map-ui">
+  <p>Average road gradient [%]</p>
+<span class="gradient one">1</span><!--
+ --><span class="gradient two">2</span><!--
+ --><span class="gradient three">3</span><!--
+ --><span class="gradient four">4</span><!--
+ --><span class="gradient five">5</span><!--
+ --><span class="gradient six">6</span><!--
+ --><span class="gradient seven">7</span><!--
+ --><span class="gradient eight">8+</span>
+</div>
     </body>
 </html>
 
