--- a/classic/index.html
+++ b/classic/index.html
@@ -5,8 +5,13 @@
         <title>Easy Riders</title>
         <link rel="stylesheet" type="text/css" href="style.css">
 
-        <!-- <script src="minified.js"></script> -->
-        <!-- <script type="text/javascript" src="main.js"></script> -->
+        <script src="minified.js"></script>
+        <script type="text/javascript" src="main.js"></script>
+        <!-- Init mapy.cz  -->
+        <!-- <script type="text/javascript" src="https://api.mapy.cz/loader.js"></script>
+        <script type="text/javascript">Loader.load();</script>
+        <script type="text/javascript" src="mapy.js"></script> -->
+   
 
         <!-- Google Maps -->
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBACpZpArBvW9RKRdt43_mk00U3P1tJrG8"></script>
@@ -17,6 +22,7 @@
     <body>
         <div class="header">
         </div>
+        <div id="mapy_container" class="map hidden"></div>
         <div id="maps_container" class="map"></div>
 
         <div class="gradients map-ui">
